[package]
name          = "nmea-parser"
version       = "0.8.0-dev"
publish       = false
description   = "NMEA 0183 parser for AIS and GNSS sentences"
authors       = ["Timo Saarinen <zaari@mailbox.org>"]
license       = "Apache-2.0"
repository    = "https://github.com/zaari/nmea-parser"
documentation = "https://docs.rs/nmea-parser"
keywords      = ["nmea", "ais", "gnss", "gps"]
categories    = ["parsing"]
readme        = "README.md"
edition       = "2018"
#rust-version  = "1.43"

[features]
multi-thread = ["dashmap"]
Chinese_binary_information =[]
serde_support =[]

[dependencies]
bitvec     = "0.21.1"
num-traits = "0.2.14"
chrono     = { version = "0.4", features = ["serde"] }
log        = "0.4.14"
dashmap = { version = "4.0.2", optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"

[dev-dependencies]
assert     = "0.7.4"

